--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -28,8 +28,8 @@
                         <a class="nav-link text-white" href="/profile">Tu perfil</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link text-white" href="/upload/{{userId}}">Premium</a>
-                     </li>
+                        <a class="nav-link text-white" href="/usermanagment">Manager de usuarios</a>
+                     </li>                    
                      <li>
                         <button id="cartButton">🛒</button>
                      </li>
@@ -48,6 +48,13 @@
       <div class="color1" >
         <a href="/restore">
         <button class="botons">Cambiar clave</button>
+        </a>
+   </div>
+   <br>
+   <div class="mb-3">
+      <div class="color1" >
+        <a href="/upload/{{userId}}">
+        <button class="botons">Hazte premium</button>
         </a>
    </div>
       </div>
