--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -307,6 +307,13 @@
     padding: 5%;
   }
   
+  .realtime-products {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
   #uploadPremiumForm input{
     width: 100%;
     height: 40px;
