--- a/views/productDetail.handlebars
+++ b/views/productDetail.handlebars
@@ -28,8 +28,8 @@
                         <a class="nav-link text-white" href="/profile">Tu perfil</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link text-white" href="/upload/{{userId}}">Premium</a>
-                     </li>
+                        <a class="nav-link text-white" href="/usermanagment">Manager de usuarios</a>
+                     </li>  
                      <li>
                         <button id="cartButton">🛒</button>
                      </li>
