--- a/views/realTimeProducts.handlebars
+++ b/views/realTimeProducts.handlebars
@@ -27,9 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/profile">Tu perfil</a>
                      </li>
-                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/upload/{{userId}}">Premium</a>
-                     </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-white" href="/usermanagment">Manager de usuarios</a>
+                     </li>  
                      <li>
                         <button id="cartButton">🛒</button>
                      </li>
