--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -4,20 +4,7 @@
     box-sizing: border-box;
     font-family:'Courier New', Courier, monospace;
   }
-  .productForm{
-    color: rgb(101, 19, 101);
-    background-color: transparent;
-    line-height: 203%;
-    padding: 10px;
-    border-radius: 5px;
-    margin-top: 20px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-  }
+  
   body {
     background: violet;
     display: flex;
@@ -29,6 +16,48 @@
     height: 800px;
     
   }
+  .productForm {
+    color:#650893;
+    background-color: transparent;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.productForm input {
+    border: 1px solid violet;
+    border-radius: 5px;
+    height: 40px;
+    margin-bottom: 15px;
+    width: auto;
+}
+
+.productForm button {
+    border: none;
+    border-radius: 5px;
+    background-color:turquoise;
+    color: #FFF;
+    padding: 5px;
+    margin-left: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.product img {
+  width: 10%;
+  
+}
+
+.productForm ::placeholder {
+    text-align: center;
+}
+
+
   #list-products{
     position:relative;
     display: flex;
@@ -312,8 +341,48 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
+    background-color:#650893;
+    width: 100%;
+    padding: 2%;
 }
 
+.product {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 100%;
+  background-color: #7d20b3;
+  border: 1px solid #ce2ebc;
+  margin: 10px 0;
+  padding: 10px;
+  color: white;
+}
+
+.delete-button {
+  border: none;
+  border-radius: 5px;
+  background-color: turquoise;
+  color: #FFF;
+  padding: 5px;
+  margin-left: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.edit-button {
+  border: none;
+  border-radius: 5px;
+  background-color: turquoise;
+  color: #FFF;
+  padding: 5px;
+  margin-left: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.btn-delete-cart{
+  border: none;
+  background-color:#B6FCFD ;
+}
   #uploadPremiumForm input{
     width: 100%;
     height: 40px;
